Added Style Basics and Homepage Structure

--- a/Resources/HTML/homepage.html
+++ b/Resources/HTML/homepage.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Well Bois</h1>
+    <!-- <h1>Well Bois</h1> -->
+    <div class="wrapper">
+        <div class="overall_container">
+            <div class="smaller_container">
+
+            </div>
+            <div class="smaller_container">
+                <div class="smallest_container header"></div>
+                <div class="smallest_container main">
+                    <img src="../../Resources/Images/General_Images/ArtByANC_Homepage_Bg.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
