Linked Homepage to the Stylesheets

--- a/Resources/HTML/homepage.html
+++ b/Resources/HTML/homepage.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../../Resources/CSS/basics.css">
+    <link rel="stylesheet" href="../../Resources/CSS/homepage.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ArtByANC | Homepage</title>
 </head>
 <body>
     <!-- <h1>Well Bois</h1> -->
