Styled The homepage and it's ready

--- a/Resources/HTML/homepage.html
+++ b/Resources/HTML/homepage.html
@@ -8,17 +8,23 @@
     <title>ArtByANC | Homepage</title>
 </head>
 <body>
-    <!-- <h1>Well Bois</h1> -->
     <div class="wrapper">
         <div class="overall_container">
             <div class="smaller_container">
-
+                <div class="logo">
+                    <img src="../../Resources/Images/General_Images/ANCBlueLogo.jpg" alt="">
+                </div>
+                <div class="nav">
+                    <ul>
+                        <li><a href="">Shop</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Contact</a></li>
+                        <li><a href=""></a></li>
+                    </ul>
+                </div>
             </div>
             <div class="smaller_container">
-                <div class="smallest_container header"></div>
-                <div class="smallest_container main">
-                    <img src="../../Resources/Images/General_Images/ArtByANC_Homepage_Bg.jpg" alt="">
-                </div>
+                <img src="../../Resources/Images/General_Images/ArtByANC_Homepage_Bg.jpg" alt="">
             </div>
         </div>
     </div>
