--- a/Resources/HTML/homepage.html
+++ b/Resources/HTML/homepage.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../../Resources/CSS/basics.css">
+    <link rel="stylesheet" href="../../Resources/CSS/header.css">
     <link rel="stylesheet" href="../../Resources/CSS/homepage.css">
+    <link rel="stylesheet" href="../../Resources/CSS/footer.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <script src="../../Resources/JS/navbar.js"></script>
     <title>ArtByANC | Homepage</title>
 </head>
 <body>
@@ -16,17 +20,29 @@
                 </div>
                 <div class="nav">
                     <ul>
-                        <li><a href="">Shop</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href=""></a></li>
+                        <li><a href="../../Resources/HTML/Shop.html">Shop</a></li>
+                        <li><a href="../../Resources/HTML/About.html">About</a></li>
+                        <li><a href="../../Resources/HTML/Contact.html">Contact</a></li>
+                        <li><a href="../../Resources/HTML/Gallery.html">Gallery</a></li>
                     </ul>
                 </div>
             </div>
             <div class="smaller_container">
+                <div class="hamburger_container">
+                    <h1>ANC</h1>
+                    <div class="burger_menu" onclick="myFunction(this)">
+                        <div class="bar1"></div>
+                        <div class="bar2"></div>
+                        <div class="bar3"></div>
+                    </div>
+                </div>
                 <img src="../../Resources/Images/General_Images/ArtByANC_Homepage_Bg.jpg" alt="">
             </div>
         </div>
+
+    </div>
+    <div class="footer">
+        <h4>ArtByANC &copy; Copyright 2020</h4>
     </div>
 </body>
 </html>
