Added the sidebar Nav and fixed it to work properly

--- a/Resources/HTML/homepage.html
+++ b/Resources/HTML/homepage.html
@@ -39,6 +39,21 @@
                 <img src="../../Resources/Images/General_Images/ArtByANC_Homepage_Bg.jpg" alt="">
             </div>
         </div>
+        <div class="Colour_Of_Month_Container">
+            <div class="colour_sm_container">
+                <h1>Colour Of The Month</h1>
+            </div>
+            <div class="colour_sm_container">
+                <div class="colour_sms_container">
+                    <div class="circle"></div>
+                </div>
+                <div class="colour_sms_container">
+                    <div class="colour_of_month_collage">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </div>
     <div class="footer">
