--- a/Resources/HTML/homepage.html
+++ b/Resources/HTML/homepage.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <script src="../../Resources/JS/navbar.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="../../Resources/JS/shop.js"></script>
     <script src="../../Resources/JS/homepage.js"></script>
     <title>ArtByANC | Homepage</title>
 </head>
