Added the coffee prints section

--- a/Resources/HTML/homepage.html
+++ b/Resources/HTML/homepage.html
@@ -42,6 +42,15 @@
                 <img src="../../Resources/Images/General_Images/ArtByANC_Homepage_Bg.jpg" alt="">
             </div>
         </div>
+        <div class="Coffee_Pics_Container">
+            <div class="coffee_sm_pics_container">
+                <img src="../../Resources/Images/Coffee_Images/Beach_Coffee_Bg.jpg" alt="">
+            </div>
+            <div class="coffee_sm_pics_container">
+                <h1>COFFEE PRINTS</h1>
+                <a href="../../Resources/HTML/Shop.html">SHOP NOW</a>
+            </div>
+        </div>
         <div class="Colour_Of_Month_Container">
             <div class="colour_sm_container">
                 <h1>Colour Of The Month</h1>
@@ -57,6 +66,7 @@
                 </div>
             </div>
         </div>
+        
 
     </div>
     <div class="footer">
