All sections made out on homepage bar footer now for phone and web versions

--- a/Resources/HTML/homepage.html
+++ b/Resources/HTML/homepage.html
@@ -51,6 +51,33 @@
                 <a href="../../Resources/HTML/Shop.html">SHOP NOW</a>
             </div>
         </div>
+        <div class="Yellow_Pics_Container">
+            <div class="yellow_sm_pics_container">
+                <h1>YELLOW PRINTS</h1>
+                <a href="../../Resources/HTML/Shop.html">SHOP NOW</a>
+            </div>
+            <div class="yellow_sm_pics_container">
+                <img src="../../Resources/Images/Yellow_Images/Yellow_Saxophone_Guy.jpg" alt="">
+            </div>
+        </div>
+        <div class="Blue_Pics_Container">
+            <div class="blue_sm_pics_container">
+                <img src="../../Resources/Images/Blue_Images/Blue_Daffodil.jpg" alt="">
+            </div>
+            <div class="blue_sm_pics_container">
+                <h1>BLUE PRINTS</h1>
+                <a href="../../Resources/HTML/Shop.html">SHOP NOW</a>
+            </div>
+        </div>
+        <div class="Abstract_Pics_Container">
+            <div class="abstract_sm_pics_container">
+                <h1>ABSTRACT PRINTS</h1>
+                <a href="../../Resources/HTML/Shop.html">SHOP NOW</a>
+            </div>
+            <div class="abstract_sm_pics_container">
+                <img src="../../Resources/Images/Abstract_Images/Abstract_Elephant.jpg" alt="">
+            </div>
+        </div>
         <div class="Colour_Of_Month_Container">
             <div class="colour_sm_container">
                 <h1>Colour Of The Month</h1>
