--- a/Resources/HTML/homepage.html
+++ b/Resources/HTML/homepage.html
@@ -19,7 +19,7 @@
         <div class="overall_container">
             <div class="smaller_container">
                 <div class="logo">
-                    <img src="../../Resources/Images/General_Images/ANCBlueLogo.jpg" alt="">
+                    <a href="../../Resources/HTML/homepage.html"><img src="../../Resources/Images/General_Images/ANCBlueLogo.jpg" alt=""></a>
                 </div>
                 <div class="nav">
                     <ul>
@@ -32,7 +32,7 @@
             </div>
             <div class="smaller_container">
                 <div class="hamburger_container">
-                    <h1>ANC</h1>
+                    <a href="../../Resources/HTML/homepage.html"><h1>ANC</h1></a>
                     <div class="burger_menu" onclick="myFunction(this)">
                         <div class="bar1"></div>
                         <div class="bar2"></div>
