Added all the stylesheets and Pages for the rest of the website

--- a/Resources/HTML/Shop.html
+++ b/Resources/HTML/Shop.html
@@ -42,6 +42,15 @@
                 <img src="../../Resources/Images/General_Images/ArtByANC_Homepage_Bg.jpg" alt="">
             </div>
         </div>
+        <div class="Shop_Main_Container">
+            <h1>Shop</h1>
+            <div class="shop_sm_container Filter_Container">
+                
+            </div>
+            <div class="shop_sm_container Products_Container">
+
+            </div>
+        </div>
     </div>
 </body>
 </html>
