Added Aisling's Changes Part 1 and got Parallax Working

--- a/Resources/HTML/homepage.html
+++ b/Resources/HTML/homepage.html
@@ -11,7 +11,6 @@
     <script src="../../Resources/JS/navbar.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../../Resources/JS/shop.js"></script>
-    <script src="../../Resources/JS/homepage.js"></script>
     <title>ArtByANC | Homepage</title>
 </head>
 <body>
@@ -31,7 +30,7 @@
                 </div>
             </div>
             <div class="smaller_container">
-                <div class="hamburger_container">
+                <div class="hamburger_container" >
                     <a href="../../Resources/HTML/homepage.html"><h1>ANC</h1></a>
                     <div class="burger_menu" onclick="myFunction(this)">
                         <div class="bar1"></div>
@@ -47,40 +46,40 @@
                 <img src="../../Resources/Images/Coffee_Images/Beach_Coffee_Bg.jpg" alt="">
             </div>
             <div class="coffee_sm_pics_container">
-                <h1>COFFEE PRINTS</h1>
-                <a href="../../Resources/HTML/Shop.html">SHOP NOW</a>
-            </div>
-        </div>
-        <div class="Yellow_Pics_Container">
-            <div class="yellow_sm_pics_container">
-                <h1>YELLOW PRINTS</h1>
-                <a href="../../Resources/HTML/Shop.html">SHOP NOW</a>
-            </div>
-            <div class="yellow_sm_pics_container">
-                <img src="../../Resources/Images/Yellow_Images/Yellow_Saxophone_Guy.jpg" alt="">
-            </div>
-        </div>
-        <div class="Blue_Pics_Container">
-            <div class="blue_sm_pics_container">
-                <img src="../../Resources/Images/Blue_Images/Blue_Daffodil.jpg" alt="">
-            </div>
-            <div class="blue_sm_pics_container">
-                <h1>BLUE PRINTS</h1>
+                <h1>COFFEE ORIGINALS</h1>
                 <a href="../../Resources/HTML/Shop.html">SHOP NOW</a>
             </div>
         </div>
         <div class="Abstract_Pics_Container">
             <div class="abstract_sm_pics_container">
-                <h1>ABSTRACT PRINTS</h1>
+                <h1>ABSTRACT ORIGINALS</h1>
                 <a href="../../Resources/HTML/Shop.html">SHOP NOW</a>
             </div>
             <div class="abstract_sm_pics_container">
                 <img src="../../Resources/Images/Abstract_Images/Abstract_Elephant.jpg" alt="">
             </div>
         </div>
+        <div class="Blue_Pics_Container">
+            <div class="blue_sm_pics_container">
+                <img src="../../Resources/Images/Blue_Images/Blue_Dancer.jpg" alt="">
+            </div>
+            <div class="blue_sm_pics_container">
+                <h1>BLUE ORIGINALS</h1>
+                <a href="../../Resources/HTML/Shop.html">SHOP NOW</a>
+            </div>
+        </div>
+        <div class="Yellow_Pics_Container">
+            <div class="yellow_sm_pics_container">
+                <h1>YELLOW PAINTINGS</h1>
+                <a href="../../Resources/HTML/Shop.html">SHOP NOW</a>
+            </div>
+            <div class="yellow_sm_pics_container">
+                <img src="../../Resources/Images/Yellow_Images/Yellow_Saxophone_Guy.jpg" alt="">
+            </div>
+        </div>
         <div class="Colour_Of_Month_Container">
             <div class="colour_sm_container">
-                <h1>Colour Of The Month</h1>
+                <h1>COLOUR OF THE MONTH ORIGINALS</h1>
             </div>
             <div class="colour_sm_container">
                 <div class="colour_sms_container">
@@ -99,5 +98,6 @@
     <div class="footer">
         <h4>ArtByANC &copy; Copyright 2020</h4>
     </div>
+    <script src="../../Resources/JS/homepage.js"></script>
 </body>
 </html>
