Put in Footer for all pages, made content appear over image on shop page

--- a/Resources/HTML/Shop.html
+++ b/Resources/HTML/Shop.html
@@ -89,6 +89,9 @@
             </div> 
         </div>
     </div>
+    <div class="footer">
+        <h4>ArtByANC &copy; Copyright 2020</h4>
+    </div>
     <script src="../../Resources/JS/shop.js"></script>
 </body>
 </html>
