--- a/Resources/HTML/About.html
+++ b/Resources/HTML/About.html
@@ -43,5 +43,8 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <h4>ArtByANC &copy; Copyright 2020</h4>
+    </div>
 </body>
 </html>
