--- a/Resources/HTML/Contact.html
+++ b/Resources/HTML/Contact.html
@@ -26,7 +26,7 @@
                         <li><a href="../../Resources/HTML/Shop.html">Shop</a></li>
                         <li><a href="../../Resources/HTML/About.html">About</a></li>
                         <li><a href="../../Resources/HTML/Contact.html">Contact</a></li>
-                        <li><a href="../../Resources/HTML/Gallery.html">Gallery</a></li>
+                        <li><a href="../../Resources/HTML/Gallery.html">Collection</a></li>
                     </ul>
                 </div>
             </div>
