--- a/Resources/HTML/Gallery.html
+++ b/Resources/HTML/Gallery.html
@@ -26,7 +26,7 @@
                         <li><a href="../../Resources/HTML/Shop.html">Shop</a></li>
                         <li><a href="../../Resources/HTML/About.html">About</a></li>
                         <li><a href="../../Resources/HTML/Contact.html">Contact</a></li>
-                        <li><a href="../../Resources/HTML/Gallery.html">Gallery</a></li>
+                        <li><a href="../../Resources/HTML/Gallery.html">Collection</a></li>
                     </ul>
                 </div>
             </div>
@@ -42,6 +42,8 @@
                 <img src="../../Resources/Images/General_Images/BG_WebTemp.jpg" alt="">
             </div>
         </div>
+        
+
     </div>
     <div class="footer">
         <h4>ArtByANC &copy; Copyright 2020</h4>
