Made the about page and made it for mobile and web version

--- a/Resources/HTML/About.html
+++ b/Resources/HTML/About.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="../../Resources/CSS/header.css">
     <link rel="stylesheet" href="../../Resources/CSS/about.css">
     <link rel="stylesheet" href="../../Resources/CSS/footer.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <script src="../../Resources/JS/navbar.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../../Resources/JS/shop.js"></script>
-    <!-- <script src="../../Resources/JS/homepage.js"></script> -->
     <title>ArtByANC | Shop</title>
 </head>
 <body>
@@ -42,9 +42,46 @@
                 <img src="../../Resources/Images/General_Images/BG_WebTemp.jpg" alt="">
             </div>
         </div>
+        <div class="About_Container">
+            <div class="About_Container_sm">
+                <img src="../../Resources/Images/General_Images/Logo_Black.jpg" alt="">
+            </div>
+            <div class="About_Container_sm">
+                <div class="About_Description">
+                    <h4>AISLING Ní CHEALLAIGH</h4>
+                    <p>Aisling prides herself on breaking the traditional gallery route having made her name independently on social media.</p>
+                    <p>Her animals garnered an unprecedented popularity in only the first year of working as a full-time artist. After graduating with a first-class degree in Business, Aisling went on to start her entrepreneurial journey by developing a ‘Tinder for Art’ app. She began painting to fund this venture but soon found it more lucrative to pursue Aisling Tea Art. </p>
+                    <p>Now Aisling has studios in London and Sydney, 3 members of full-time staff and a relentless demand for her animal, abstract and now nude artworks.</p> 
+                </div>
+                <br>
+                <hr>
+                <br>
+                <div class="About_Contact">
+                    <h4>THE ANC TEAM</h4>
+                    <p>Aisling Ní Cheallaigh - Artist, Creative Director & Founder</p>
+                    <div class="About_Contact_Social_Icons_Container">
+                        <a href=""><i class="fa fa-2x fa-facebook" aria-hidden="true"></i></a>
+                        <a href=""><i class="fa fa-2x fa-pinterest-p" aria-hidden="true"></i></a>
+                        <a href=""><i class="fa fa-2x fa-instagram" aria-hidden="true"></i></a>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+        <div class="Colour_Of_Month_Container">
+            <div class="colour_sm_container">
+                <h1>COLOUR OF THE MONTH ORIGINALS</h1>
+                <div class="circle"></div>
+            </div>
+            <div class="colour_sm_container">
+                <div class="colour_of_month_collage">
+                </div>
+            </div>
+        </div>
     </div>
     <div class="footer">
         <h4>ArtByANC &copy; Copyright 2020</h4>
     </div>
+    <script src="../../Resources/JS/homepage.js"></script>
 </body>
 </html>
