Made the Mobile and Web Version of The Contact Page

--- a/Resources/HTML/Contact.html
+++ b/Resources/HTML/Contact.html
@@ -42,6 +42,50 @@
                 <img src="../../Resources/Images/General_Images/BG_WebTemp.jpg" alt="">
             </div>
         </div>
+        <div class="Contact_Details_Container">
+            <div class="Contact_Details_Container_sm">
+                <h3>CONTACT</h3>
+                <p>GIVE US A CALL/WHATSAPP ON:</p>
+                <p><b>+447395792843</b></p>
+                <p>POP AN EMAIL OVER:</p>
+                <p>Aisling at <b>artbyanc1@gmail.com</b> to reach the artist personally.</p>
+            </div>
+            <br><hr><br>
+            <div class="Contact_Details_Container_sm">
+                <h5>For any other enquiries</h5>
+                <h5>Fill in the form below:</h5>
+                <form action="#" method="post">
+                    <p>Name *</p>
+                    <div class="Name_Inputs">
+                        <div class="F_Name"><input type="text"><p>First Name</p></div>
+                        <div class="L_Name"><input type="text"><p>Last Name</p></div>
+                    </div>
+                    <br>
+                    <p>Your Email Address *</p>
+                    <div class="Email_Inputs">
+                        <input type="email">
+                    </div>
+                    <br>
+                    <p>Message *</p>
+                    <div class="Message_Inputs">
+                        <textarea rows="4" data-gramm_editor="false"></textarea>
+                    </div>
+                    <div class="Contact_Form_Btn_Container">
+                        <input type="submit" value="SUBMIT">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="Colour_Of_Month_Container">
+            <div class="colour_sm_container">
+                <h1>COLOUR OF THE MONTH ORIGINALS</h1>
+                <div class="circle"></div>
+            </div>
+            <div class="colour_sm_container">
+                <div class="colour_of_month_collage">
+                </div>
+            </div>
+        </div>
     </div>
     <div class="footer">
         <h4>ArtByANC &copy; Copyright 2020</h4>
