--- a/Resources/HTML/Shop.html
+++ b/Resources/HTML/Shop.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="../../Resources/CSS/header.css">
     <link rel="stylesheet" href="../../Resources/CSS/shop.css">
     <link rel="stylesheet" href="../../Resources/CSS/footer.css">
-    <link rel="stylesheet" href="../../Resources/Libraries/jsr/dist/assets/css/main.css">
+    <link rel="stylesheet" href="https://rawgit.com/mm-jsr/jsr/master/dist/assets/css/main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Quicksand&display=swap" rel="stylesheet">
-    <script src="../../Resources/Libraries/jsr/dist/main.js"></script>
+    <script src="https://rawgit.com/mm-jsr/jsr/master/dist/main.js"></script>
     <script src="../../Resources/JS/navbar.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>ArtByANC | Shop</title>
