Trying to sort out the Js on the Shop Page

--- a/Resources/HTML/Shop.html
+++ b/Resources/HTML/Shop.html
@@ -90,7 +90,7 @@
     <div class="footer">
         <h4>ArtByANC &copy; Copyright 2020</h4>
     </div>
-    <script>
+    <!-- <script>
         var price_picker = document.getElementById('Price_Picker');
         new JSR([price_picker],{
             sliders:1,
@@ -109,7 +109,7 @@
         });
         var canvas = document.getElementsByClassName('jsr_canvas')[0];
         canvas.style.width = "275px";
-    </script>
+    </script> -->
     <script src="../../Resources/JS/shop.js"></script>
 </body>
 </html>
