Starting to Make the Checkout and Payment Integration

--- a/Resources/HTML/Cart.html
+++ b/Resources/HTML/Cart.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../../Resources/CSS/basics.css">
     <link rel="stylesheet" href="../../Resources/CSS/header.css">
-    <link rel="stylesheet" href="../../Resources/CSS/shop.css">
+    <link rel="stylesheet" href="../../Resources/CSS/homepage.css">
     <link rel="stylesheet" href="../../Resources/CSS/footer.css">
-    <link rel="stylesheet" href="https://rawgit.com/mm-jsr/jsr/master/dist/assets/css/main.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Quicksand&display=swap" rel="stylesheet">
-    <script src="https://rawgit.com/mm-jsr/jsr/master/dist/main.js"></script>
     <script src="../../Resources/JS/navbar.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <title>ArtByANC | Shop</title>
+    <script src="../../Resources/JS/shop.js"></script>
+    <title>ArtByANC | Homepage</title>
 </head>
 <body>
     <div class="wrapper">
@@ -43,49 +41,6 @@
                 <img src="../../Resources/Images/General_Images/BG_WebTemp.jpg" alt="">
             </div>
         </div>
-        <div class="Shop_Main_Container">
-            <div class="Shop_Main_sm_container">
-                <h1>Shop</h1>
-                <div class="filter_sort_mobile_btns">
-                    <div class="filter_mobile">
-                        <h2>FILTER BY</h2>
-                    </div>
-                    <div class="sort_mobile">
-                        <h2>SORT BY</h2><span class="pointer">▼</span>
-                        <div class="sort_options_container">
-                            <ul>
-                                <li>NEW IN</li>
-                                <li>BEST SELLERS</li>
-                                <li>PRICE LOW TO HIGH</li>
-                                <li>PRICE HIGH TO LOW</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="Shop_Main_sm_container">
-                <div class="shop_sm_container Filter_Container">
-                    <div class="Price_sm_filter_container">
-                        <h2>Price</h2>
-                        <input type="range" name="Price_Picker" id="Price_Picker">
-                    </div>
-                    <div class="Colour_sm_filter_container">
-                        <h2>Colour</h2><br>
-                        <input type="color" name="Colour_Picker" id="Colour_Picker">
-                    </div>
-                    <div class="Type_sm_filter_container">
-                        <h2>Type</h2><br>
-                        <input type="checkbox" name="Art_Type" id="Blue_Prints"><label for="Blue_Prints">Blue Prints</label><br>
-                        <input type="checkbox" name="Art_Type" id="Yellow_Prints"><label for="Yellow_Prints">Yellow Prints</label><br>
-                        <input type="checkbox" name="Art_Type" id="Coffee_Prints"><label for="Coffee_Prints">Coffee Prints</label><br>
-                        <input type="checkbox" name="Art_Type" id="Abstract_Prints"><label for="Abstract_Prints">Abstract Prints</label><br>
-                    </div>
-                </div>
-                <div class="shop_sm_container Products_Container">
-
-                </div>
-            </div> 
-        </div>
         <div class="Colour_Of_Month_Container">
             <div class="colour_sm_container">
                 <h1>COLOUR OF THE MONTH ORIGINALS</h1>
@@ -99,7 +54,6 @@
     <div class="footer">
         <h4>ArtByANC &copy; Copyright 2020</h4>
     </div>
-    <script src="../../Resources/JS/shop.js"></script>
     <script>
         // $(window).on('load', function() { 
         //     var a_tags = document.getElementsByTagName("a");
