Started adding the cart functionality

--- a/Resources/HTML/ProductView.html
+++ b/Resources/HTML/ProductView.html
@@ -10,10 +10,11 @@
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Quicksand&display=swap" rel="stylesheet">
     <script src="../../Resources/JS/navbar.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="../../Resources/JS/Cart.js"></script>
     <title>ArtByANC | Homepage</title>
 </head>
 <body>
-    <div class="wrapper">
+    <div class="wrapper" id="Whole_Site">
         <div class="overall_container">
             <div class="smaller_container">
                 <div class="logo">
@@ -41,7 +42,7 @@
             </div>
         </div>
         <div class="main_box">
-            <div id="one">
+            <div id="Product_Container">
                 <div id="detailsContainer">
 
                 </div>
