--- a/Resources/HTML/Cart.html
+++ b/Resources/HTML/Cart.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../../Resources/CSS/basics.css">
     <link rel="stylesheet" href="../../Resources/CSS/header.css">
-    <link rel="stylesheet" href="../../Resources/CSS/homepage.css">
+    <link rel="stylesheet" href="../../Resources/CSS/cart.css">
     <link rel="stylesheet" href="../../Resources/CSS/footer.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Quicksand&display=swap" rel="stylesheet">
     <script src="../../Resources/JS/navbar.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="../../Resources/JS/shop.js"></script>
+    <script src="../../Resources/JS/Cart.js"></script>
     <title>ArtByANC | Homepage</title>
 </head>
+
 <body>
-    <div class="wrapper">
+    <div class="wrapper" id="Whole_Site">
         <div class="overall_container">
             <div class="smaller_container">
                 <div class="logo">
-                    <a href="../../Resources/HTML/homepage.html"><img src="../../Resources/Images/General_Images/Logo_Black.jpg" alt=""></a>
+                    <a href="../../Resources/HTML/homepage.html"><img
+                            src="../../Resources/Images/General_Images/Logo_Black.jpg" alt=""></a>
                 </div>
                 <div class="nav">
                     <ul>
@@ -30,8 +33,10 @@
                 </div>
             </div>
             <div class="smaller_container">
-                <div class="hamburger_container" >
-                    <a href="../../Resources/HTML/homepage.html"><h1>ANC</h1></a>
+                <div class="hamburger_container">
+                    <a href="../../Resources/HTML/homepage.html">
+                        <h1>ANC</h1>
+                    </a>
                     <div class="burger_menu" onclick="myFunction(this)">
                         <div class="bar1"></div>
                         <div class="bar2"></div>
@@ -39,6 +44,26 @@
                     </div>
                 </div>
                 <img src="../../Resources/Images/General_Images/BG_WebTemp.jpg" alt="">
+            </div>
+        </div>
+        <h1 class="shopping_title">Shopping Cart</h1>
+        <div class="checkoutContainer">
+            <form action="Cart.html" class="Cart_Form" method="post">
+                <div class="checkoutPartContainer1">
+                        
+                </div>
+                <div class="bottomPart">
+                    <div class="subtotal_label">
+                        <span>
+                            <h5>Subtotal:</h5>
+                            <h3 class="s_total">€25.00</h3>
+                        </span>
+                    </div>
+                </div>
+            </form>
+            <div class="proceed_to_checkout">
+                <a href="../../Resources/HTML/Shop.html">Continue Shopping</a>
+                <a href="../../Resources/HTML/Checkout.html">Proceed To Checkout</a>
             </div>
         </div>
         <div class="Colour_Of_Month_Container">
@@ -60,7 +85,7 @@
         //     a_tags[11].style.display = "none";
         //     console.log("Well Bitches");
         // });
-        function loadScript(url){
+        function loadScript(url) {
             document.body.appendChild(document.createElement("script")).src = url;
             console.log("That's appended there nw x");
             return true;
@@ -68,9 +93,9 @@
         loadScript('https://apps.elfsight.com/p/platform.js')
         var script_tags = document.getElementsByTagName('script');
         var counter = 0;
-        for (var i = 0 ; i < script_tags.length - 1; i++ ){
+        for (var i = 0; i < script_tags.length - 1; i++) {
             console.log(script_tags[i].src);
-            switch (script_tags[i].src){
+            switch (script_tags[i].src) {
                 case "https://apps.elfsight.com/p/platform.js":
                     counter += 1;
                 case "https://static.elfsight.com/apps/instashow/release/27aff712-1ef7-4d37-adad-d06157590053/app/instagram-feed.js":
@@ -81,9 +106,9 @@
         }
         console.log(counter);
         console.log(script_tags[i].src);
-        for (var i = 0 ; i < script_tags.length - 1; i++ ){
+        for (var i = 0; i < script_tags.length - 1; i++) {
             console.log(script_tags[i].src);
-            switch (script_tags[i].src){
+            switch (script_tags[i].src) {
                 case "https://apps.elfsight.com/p/platform.js":
                     counter += 1;
                 case "https://static.elfsight.com/apps/instashow/release/27aff712-1ef7-4d37-adad-d06157590053/app/instagram-feed.js":
@@ -99,7 +124,7 @@
         // } else if(loadScript('https://apps.elfsight.com/p/platform.js'))  {
         //     loadScript('../../Resources/JS/homepage.js');
         // }
-        
     </script>
 </body>
+
 </html>
