Got the Add To Cart Functionality Working

--- a/Resources/HTML/Cart.html
+++ b/Resources/HTML/Cart.html
@@ -49,7 +49,7 @@
         <h1 class="shopping_title">Shopping Cart</h1>
         <div class="checkoutContainer">
             <form action="Cart.html" class="Cart_Form" method="post">
-                <div class="checkoutPartContainer1">
+                <div class="checkoutDisplayContainers">
                         
                 </div>
                 <div class="bottomPart">
