--- a/Resources/HTML/Payment.html
+++ b/Resources/HTML/Payment.html
@@ -11,6 +11,7 @@
     <script src="../../Resources/JS/navbar.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
     <script src="../../Resources/JS/Cart.js"></script>
     <title>ArtByANC | Homepage</title>
 </head>
@@ -60,8 +61,9 @@
                         <input type="hidden" name="">
                         <input type="hidden" name="">
                         <input type="hidden" name="">
-                        <input type="submit" value="Pay With Paypal">
-                        <input type="submit" value="Pay With Credit Card">
+                        <div id="paypal-button"></div>
+                        <!-- <input type="submit" value="Pay With Paypal" >
+                        <input type="submit" value="Pay With Credit Card"> -->
                     </form>
                 </div>
             </div>
@@ -81,11 +83,7 @@
         <h4>ArtByANC &copy; Copyright 2020</h4>
     </div>
     <script>
-        // $(window).on('load', function() { 
-        //     var a_tags = document.getElementsByTagName("a");
-        //     a_tags[11].style.display = "none";
-        //     console.log("Well Bitches");
-        // });
+
         function loadScript(url) {
             document.body.appendChild(document.createElement("script")).src = url;
             console.log("That's appended there nw x");
