Fixed the price filter , working perfectly now

--- a/Resources/HTML/About.html
+++ b/Resources/HTML/About.html
@@ -12,7 +12,7 @@
     <script src="../../Resources/JS/navbar.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../../Resources/JS/shop.js"></script>
-    <title>ArtByANC | Shop</title>
+    <title>ArtByANC | About</title>
 </head>
 <body>
     <div class="wrapper">
