--- a/Resources/HTML/Cart.html
+++ b/Resources/HTML/Cart.html
@@ -12,7 +12,7 @@
     <script src="../../Resources/JS/navbar.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../../Resources/JS/Cart.js"></script>
-    <title>ArtByANC | Homepage</title>
+    <title>ArtByANC | Cart</title>
 </head>
 
 <body>
