--- a/Resources/HTML/Checkout.html
+++ b/Resources/HTML/Checkout.html
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
     <script src="../../Resources/JS/Cart.js"></script>
-    <title>ArtByANC | Homepage</title>
+    <title>ArtByANC | Checkout</title>
 </head>
 <body>
     <div class="wrapper" id="Whole_Site">
