--- a/Resources/HTML/Payment.html
+++ b/Resources/HTML/Payment.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
     <script src="https://www.paypalobjects.com/api/checkout.js"></script>
     <script src="../../Resources/JS/Cart.js"></script>
-    <title>ArtByANC | Homepage</title>
+    <title>ArtByANC | Payment</title>
 </head>
 <body>
     <div class="wrapper" id="Whole_Site">
