--- a/Resources/HTML/ProductView.html
+++ b/Resources/HTML/ProductView.html
@@ -11,7 +11,7 @@
     <script src="../../Resources/JS/navbar.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../../Resources/JS/Cart.js"></script>
-    <title>ArtByANC | Homepage</title>
+    <title>ArtByANC | Shop</title>
 </head>
 <body>
     <div class="wrapper" id="Whole_Site">
