--- a/Resources/HTML/Shop.html
+++ b/Resources/HTML/Shop.html
@@ -99,28 +99,7 @@
     <div class="footer">
         <h4>ArtByANC &copy; Copyright 2020</h4>
     </div>
+    <script src="../../Resources/Libraries/ColourSorter.js"></script>
     <script src="../../Resources/JS/shop.js"></script>
-    <script>
-        function loadScript(url){
-            document.body.appendChild(document.createElement("script")).src = url;
-            // console.log("That's appended there nw x");
-            return true;
-        }
-        loadScript('https://apps.elfsight.com/p/platform.js')
-        var script_tags = document.getElementsByTagName('script');
-        var counter = 0;
-        for (var i = 0 ; i < script_tags.length - 1; i++ ){
-            // console.log(script_tags[i].src);
-            switch (script_tags[i].src){
-                case "https://apps.elfsight.com/p/platform.js":
-                    counter += 1;
-                case "https://static.elfsight.com/apps/instashow/release/27aff712-1ef7-4d37-adad-d06157590053/app/instagram-feed.js":
-                    counter += 1;
-                default:
-                    counter = 0;
-            }
-        }
-        loadScript("../../Resources/JS/homepage.js");
-    </script>
 </body>
 </html>
