Added the Sort Filter into Web Version going to change the properties of the filter and get them working now

--- a/Resources/HTML/Checkout.html
+++ b/Resources/HTML/Checkout.html
@@ -27,7 +27,7 @@
                         <li><a href="../../Resources/HTML/Shop.html">Shop</a></li>
                         <li><a href="../../Resources/HTML/About.html">About</a></li>
                         <li><a href="../../Resources/HTML/Contact.html">Contact</a></li>
-                        <li><a href="../../Resources/HTML/Gallery.html">Collection</a></li>
+                        <li><a href="../../Resources/HTML/Gallery.html">Commissions</a></li>
                     </ul>
                 </div>
             </div>
