--- a/Resources/HTML/Shop.html
+++ b/Resources/HTML/Shop.html
@@ -27,7 +27,7 @@
                         <li><a href="../../Resources/HTML/Shop.html">Shop</a></li>
                         <li><a href="../../Resources/HTML/About.html">About</a></li>
                         <li><a href="../../Resources/HTML/Contact.html">Contact</a></li>
-                        <li><a href="../../Resources/HTML/Gallery.html">Collection</a></li>
+                        <li><a href="../../Resources/HTML/Gallery.html">Commissions</a></li>
                     </ul>
                 </div>
             </div>
@@ -99,7 +99,7 @@
     <div class="footer">
         <h4>ArtByANC &copy; Copyright 2020</h4>
     </div>
-    <script src="../../Resources/Libraries/ColourSorter.js"></script>
+    <!-- <script src="../../Resources/Libraries/ColourSorter.js"></script> -->
     <script src="../../Resources/JS/shop.js"></script>
 </body>
 </html>
