Changed up the Google Sheet to include a few more columns(Medium , Size) which I need for the sorters  and have it easier for Aisling now , changed prices aswell. Going to work on sorters now

--- a/Resources/HTML/About.html
+++ b/Resources/HTML/About.html
@@ -26,7 +26,7 @@
                         <li><a href="../../Resources/HTML/Shop.html">Shop</a></li>
                         <li><a href="../../Resources/HTML/About.html">About</a></li>
                         <li><a href="../../Resources/HTML/Contact.html">Contact</a></li>
-                        <li><a href="../../Resources/HTML/Gallery.html">Commissions</a></li>
+                        <li><a href="../../Resources/HTML/Commissions.html">Commissions</a></li>
                     </ul>
                 </div>
             </div>
@@ -49,7 +49,7 @@
             <div class="About_Container_sm">
                 <div class="About_Description">
                     <h4>AISLING Ní CHEALLAIGH</h4>
-                    <p>Aisling prides herself on breaking the traditional gallery route having made her name independently on social media.</p>
+                    <p>Aisling prides herself on breaking the traditional Commissions route having made her name independently on social media.</p>
                     <p>Her animals garnered an unprecedented popularity in only the first year of working as a full-time artist. After graduating with a first-class degree in Business, Aisling went on to start her entrepreneurial journey by developing a ‘Tinder for Art’ app. She began painting to fund this venture but soon found it more lucrative to pursue Aisling Tea Art. </p>
                     <p>Now Aisling has studios in London and Sydney, 3 members of full-time staff and a relentless demand for her animal, abstract and now nude artworks.</p> 
                 </div>
