--- a/Resources/HTML/Commissions.html
+++ b/Resources/HTML/Commissions.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../../Resources/CSS/basics.css">
     <link rel="stylesheet" href="../../Resources/CSS/header.css">
-    <link rel="stylesheet" href="../../Resources/CSS/gallery.css">
+    <link rel="stylesheet" href="../../Resources/CSS/Commissions.css">
     <link rel="stylesheet" href="../../Resources/CSS/footer.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../../Resources/JS/shop.js"></script>
     <!-- <script src="../../Resources/JS/homepage.js"></script> -->
-    <title>ArtByANC | Gallery</title>
+    <title>ArtByANC | Commissions</title>
 </head>
 <body>
     <div class="wrapper">
@@ -26,7 +26,7 @@
                         <li><a href="../../Resources/HTML/Shop.html">Shop</a></li>
                         <li><a href="../../Resources/HTML/About.html">About</a></li>
                         <li><a href="../../Resources/HTML/Contact.html">Contact</a></li>
-                        <li><a href="../../Resources/HTML/Gallery.html">Commissions</a></li>
+                        <li><a href="../../Resources/HTML/Commissions.html">Commissions</a></li>
                     </ul>
                 </div>
             </div>
