--- a/Resources/HTML/ProductView.html
+++ b/Resources/HTML/ProductView.html
@@ -25,7 +25,7 @@
                         <li><a href="../../Resources/HTML/Shop.html">Shop</a></li>
                         <li><a href="../../Resources/HTML/About.html">About</a></li>
                         <li><a href="../../Resources/HTML/Contact.html">Contact</a></li>
-                        <li><a href="../../Resources/HTML/Gallery.html">Commissions</a></li>
+                        <li><a href="../../Resources/HTML/Commissions.html">Commissions</a></li>
                     </ul>
                 </div>
             </div>
